k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ss-annotator-api-deployment
  labels:
    name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: 414252687335.dkr.ecr.us-east-1.amazonaws.com/similar-search-annotator:server_01
      restartPolicy: Always
