k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ss-annotator-client-deployment
  labels:
    name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: 414252687335.dkr.ecr.us-east-1.amazonaws.com/similar-search-annotator:client_02
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
