k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ss-annotator-api-service
  labels:
    service: api
spec:
  selector:
    app: api
  ports:
  - port: 5000
    targetPort: 5000
