k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ss-annotator-client-service
  labels:
    service: client
spec:
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
