k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ss-annotator-api-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.ss-annotator.app.prod-ml.myplantin.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-ss-annotator-api-service
            port:
              number: 5000
