k8s/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ss-annotator-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10M"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - plantin'
spec:
  ingressClassName: nginx
  rules:
  - host: ss-annotator.app.prod-ml.myplantin.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-ss-annotator-client-service
            port:
              number: 80
